--- a/UCSC_Course_Planner/templates/majorprogress.html
+++ b/UCSC_Course_Planner/templates/majorprogress.html
@@ -48,15 +48,15 @@
 
                 $('#subButton').click(function (event) {
 {#                        classes = $("#alignment").val($(this).text());#}
-{#                        alert($('form').serialize());#}
+                        alert($('form').serialize());
                         classes = $('form').serialize();
                         $.post("/majorprogress", { 'courses' : classes } )
                                 .done(function(data) {
-{#                                    alert(data);#}
+                                    alert(data);
 {#                                    updateChanges(false);#}
 {#                                    $(window).unbind('beforeunload');#}
 {#                                                                Going to want to get ride of this alert eventually too#}
-                                alert("Data Loaded: " + data);
+{#                                alert("Data Loaded: " + data);#}
                                 });
                     });
 
