Made side bar text small

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -562,10 +562,10 @@
 {#            <div style="background-color: beige">#}
                 <h2>News + Info</h2>
 
-                <p>Last Day to drop a class: April 5th
+                <p><small>Last Day to drop a class: April 5th
                 <br>
                    Spring Enrollement Opens: March 1st
-                <br>
+                <br></small>
                 </p>
                 <hr>
                 {% if major2 %}
