Added stuff to other relevant info pane

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -620,6 +620,11 @@
                 <hr>
                 <h3>Additional Notes:</h3>
                 <p>Other relevant information to students...</p>
+                <ul>
+                <li><a href="my.ucsc.edu">My UCSC</a><br></li>
+                <li><a href="http://registrar.ucsc.edu/soc/">Registrar </a></li>
+                <li><a href="ecommons.ucsc.edu">ECommons</a><br></li>
+                </ul>
             </div>
         </div>
         <!-- Main hero unit for a primary marketing message or call to action -->
